# hacaton

./: .gitignore  README.md  compose.yaml  docker-compose.yml  package-lock.json  pyproject.toml  ruff.toml  run_all.sh  session_name.session
backend/: .env  .env.example  Dockerfile  __main__.py  login.py  main.py  models.py  requirements.txt  sample_data.py  services.py  users.json
backend/agent/core/: comments_chain.py  content_analysis.py  content_forecast.py  model_answer.py  models_config.py  openapi_router.py  utils.py
backend/agent/prompts/: analyse_actuality.py  analyse_comment.py  analyser_previous.py
backend/api/: router.py  schemas.py
backend/application/: content_getter.py  mocks.py
backend/domain/: exceptions.py  models.py  schemas.py
backend/infra/: config.py  di.py
backend/infra/api_wrappers/: base.py  model_wrapper.py  tg_wrapper.py  youtube_wrapper.py
docker/: Dockerfile  start.sh
frontend/: .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/docker/: Dockerfile
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: EngagementPanel.jsx  FilterBar.jsx  KpiCard.jsx  Layout.jsx  OverviewHero.jsx  Sidebar.jsx  StatsCharts.jsx  SummaryStrip.jsx  Topbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ChatBot.jsx  Compare.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx  Registry.jsx  Settings.jsx  Tables.jsx
src/pages/: Profile.jsx
